<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_item_user"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:background="@color/secondary_color_2"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_profile"
            android:layout_width="55dp"
            android:layout_height="55dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            style="@style/TextMainUser"
            android:id="@+id/tv_item_username"
            android:layout_marginStart="20dp"
            android:text="@string/username"
            android:textColor="@color/primary_color_1"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/tv_item_company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_item_profile"/>

        <ImageView
            android:id="@+id/img_item_icon_company"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/icon_company"
            android:src="@drawable/ic_baseline_work_24"
            app:layout_constraintBottom_toBottomOf="@+id/tv_item_company"
            app:layout_constraintStart_toStartOf="@+id/tv_item_username"
            app:layout_constraintTop_toTopOf="@+id/tv_item_company"
            app:tint="@color/secondary_color_1" />

        <TextView
            style="@style/TextMainUser"
            android:id="@+id/tv_item_company"
            android:layout_marginStart="8dp"
            android:layout_marginTop="-4dp"
            android:text="@string/company"
            android:textColor="@color/secondary_color_1"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_item_icon_company"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_username" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>